// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transaction.vue > Should display parsed error messages 1`] = `
"<div data-v-a8515013="" class="v-container v-container--fluid v-locale--is-ltr">
  <div data-v-a8515013="" class="v-row">
    <div data-v-a8515013="" class="v-col">
      <!--v-if-->
      <h2 data-v-a8515013="" class="text-truncate mb-2">Tx 0x05d709954d59bfaa43bcf629b0a415d30e56ab1400d96dc7bd0ed1664a702759</h2>
    </div>
    <!--v-if-->
  </div><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-success mr-2" draggable="false" style="display: none;"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-check mdi v-icon notranslate v-theme--light v-icon--size-small text-white mr-1" aria-hidden="true"></i>Transaction Succeeded </div>
  <!---->
  <!----></span><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-error mr-2" draggable="false"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-alert-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-white mr-1" aria-hidden="true"></i> Transaction Failed </div>
  <!---->
  <!----></span><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-grey mr-2" draggable="false" style="display: none;"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-help-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-white mr-1" aria-hidden="true"></i> Unknown Transaction Status </div>
  <!---->
  <!----></span>
  <!--v-if-->
  <div data-v-a8515013="" class="v-row mt-2">
    <div data-v-a8515013="" class="v-col">
      <div data-v-a8515013="" class="text-overline">Error Message</div>
      <div data-v-a8515013="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
        <!---->
        <div class="v-card__loader">
          <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
            <!---->
            <div class="v-progress-linear__background"></div>
            <div class="v-progress-linear__buffer" style="width: 0%;"></div>
            <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
              <div class="v-progress-linear__indeterminate">
                <div class="v-progress-linear__indeterminate long"></div>
                <div class="v-progress-linear__indeterminate short"></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <!---->
        <!---->
        <div data-v-a8515013="" class="v-card-text" style="white-space: pre-wrap;">Error</div>
        <!---->
        <!----><span class="v-card__underlay"></span>
      </div>
    </div>
  </div>
  <div data-v-a8515013="" class="v-row my-2">
    <div data-v-a8515013="" class="v-col v-col-5 text-truncate">
      <div data-v-a8515013="" class="text-overline">From</div>
      <hash-link-stub data-v-a8515013="" type="address" hash="0xc056255e6b1e6001852f9f20587a964cb89418e7" fullhash="true"></hash-link-stub>
    </div>
    <div data-v-a8515013="" class="v-col v-col-5 text-truncate">
      <div data-v-a8515013="" class="text-overline">To</div>
      <hash-link-stub data-v-a8515013="" type="address" hash="0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48" fullhash="true" withname="true"></hash-link-stub>
    </div>
  </div>
  <div data-v-a8515013="" class="v-row mb-4">
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Gas Used</div><span data-v-a8515013="">43,713</span>
    </div>
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Gas Price</div> 59 gwei
    </div>
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Cost</div><span data-v-a8515013="">0.002579067 Ether</span>
    </div>
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Value</div> 0 Ether
    </div>
  </div>
  <div data-v-a8515013="" class="v-row mb-4">
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-8 v-col">
      <div data-v-a8515013="" class="v-row">
        <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-3 v-col">
          <div data-v-a8515013="" class="text-overline">Block</div><a data-v-a8515013="" style="text-decoration: none;">13,012,562</a>
        </div>
        <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-3 v-col">
          <div data-v-a8515013="" class="text-overline">Mined At</div> 08/07 2:33:37 PM<br data-v-a8515013=""><small data-v-a8515013="">a few seconds ago</small>
        </div>
        <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-3 v-col">
          <div data-v-a8515013="" class="text-overline">Gas Limit</div> 84,000
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <transaction-data-stub data-v-a8515013="" transaction="[object Object]" withoutstorageheader="true"></transaction-data-stub>
  <!--v-if-->
</div>"
`;

exports[`Transaction.vue > Should display raw error messages 1`] = `
"<div data-v-a8515013="" class="v-container v-container--fluid v-locale--is-ltr">
  <div data-v-a8515013="" class="v-row">
    <div data-v-a8515013="" class="v-col">
      <!--v-if-->
      <h2 data-v-a8515013="" class="text-truncate mb-2">Tx 0x05d709954d59bfaa43bcf629b0a415d30e56ab1400d96dc7bd0ed1664a702759</h2>
    </div>
    <!--v-if-->
  </div><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-success mr-2" draggable="false" style="display: none;"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-check mdi v-icon notranslate v-theme--light v-icon--size-small text-white mr-1" aria-hidden="true"></i>Transaction Succeeded </div>
  <!---->
  <!----></span><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-error mr-2" draggable="false"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-alert-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-white mr-1" aria-hidden="true"></i> Transaction Failed </div>
  <!---->
  <!----></span><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-grey mr-2" draggable="false" style="display: none;"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-help-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-white mr-1" aria-hidden="true"></i> Unknown Transaction Status </div>
  <!---->
  <!----></span>
  <!--v-if-->
  <div data-v-a8515013="" class="v-row mt-2">
    <div data-v-a8515013="" class="v-col">
      <div data-v-a8515013="" class="text-overline">Error Message</div>
      <div data-v-a8515013="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
        <!---->
        <div class="v-card__loader">
          <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
            <!---->
            <div class="v-progress-linear__background"></div>
            <div class="v-progress-linear__buffer" style="width: 0%;"></div>
            <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
              <div class="v-progress-linear__indeterminate">
                <div class="v-progress-linear__indeterminate long"></div>
                <div class="v-progress-linear__indeterminate short"></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <!---->
        <!---->
        <div data-v-a8515013="" class="v-card-text"><b data-v-a8515013="">Couldn't parse error message. Raw data:</b>
          <div data-v-a8515013="" style="white-space: pre-wrap;" class="mt-1">"{\\"message\\":\\"this is an error\\"}"</div>
        </div>
        <!---->
        <!----><span class="v-card__underlay"></span>
      </div>
    </div>
  </div>
  <div data-v-a8515013="" class="v-row my-2">
    <div data-v-a8515013="" class="v-col v-col-5 text-truncate">
      <div data-v-a8515013="" class="text-overline">From</div>
      <hash-link-stub data-v-a8515013="" type="address" hash="0xc056255e6b1e6001852f9f20587a964cb89418e7" fullhash="true"></hash-link-stub>
    </div>
    <div data-v-a8515013="" class="v-col v-col-5 text-truncate">
      <div data-v-a8515013="" class="text-overline">To</div>
      <hash-link-stub data-v-a8515013="" type="address" hash="0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48" fullhash="true" withname="true"></hash-link-stub>
    </div>
  </div>
  <div data-v-a8515013="" class="v-row mb-4">
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Gas Used</div><span data-v-a8515013="">43,713</span>
    </div>
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Gas Price</div> 59 gwei
    </div>
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Cost</div><span data-v-a8515013="">0.002579067 Ether</span>
    </div>
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Value</div> 0 Ether
    </div>
  </div>
  <div data-v-a8515013="" class="v-row mb-4">
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-8 v-col">
      <div data-v-a8515013="" class="v-row">
        <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-3 v-col">
          <div data-v-a8515013="" class="text-overline">Block</div><a data-v-a8515013="" style="text-decoration: none;">13,012,562</a>
        </div>
        <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-3 v-col">
          <div data-v-a8515013="" class="text-overline">Mined At</div> 08/07 2:33:37 PM<br data-v-a8515013=""><small data-v-a8515013="">a few seconds ago</small>
        </div>
        <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-3 v-col">
          <div data-v-a8515013="" class="text-overline">Gas Limit</div> 84,000
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <transaction-data-stub data-v-a8515013="" transaction="[object Object]" withoutstorageheader="true"></transaction-data-stub>
  <!--v-if-->
</div>"
`;

exports[`Transaction.vue > Should display the transaction when the receipt is not synced yet 1`] = `
"<div data-v-a8515013="" class="v-container v-container--fluid v-locale--is-ltr">
  <div data-v-a8515013="" class="v-row">
    <div data-v-a8515013="" class="v-col">
      <div data-v-a8515013="" class="v-alert v-theme--light bg-warning v-alert--density-compact v-alert--variant-flat my-2" role="alert">
        <!----><span class="v-alert__underlay"></span>
        <!---->
        <div class="v-alert__prepend"><i class="mdi-alert-circle mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="compact"></i></div>
        <div class="v-alert__content">
          <!----> Transaction has been picked up by the indexer, and is currently still being processed. Once it's finished, additional data will be displayed.
        </div>
        <!---->
        <!---->
      </div>
      <h2 data-v-a8515013="" class="text-truncate mb-2">Tx 0x05d709954d59bfaa43bcf629b0a415d30e56ab1400d96dc7bd0ed1664a702759</h2>
    </div>
    <!--v-if-->
  </div><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-success mr-2" draggable="false" style="display: none;"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-check mdi v-icon notranslate v-theme--light v-icon--size-small text-white mr-1" aria-hidden="true"></i>Transaction Succeeded </div>
  <!---->
  <!----></span><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-error mr-2" draggable="false" style="display: none;"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-alert-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-white mr-1" aria-hidden="true"></i> Transaction Failed </div>
  <!---->
  <!----></span><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-grey mr-2" draggable="false"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-help-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-white mr-1" aria-hidden="true"></i> Unknown Transaction Status </div>
  <!---->
  <!----></span>
  <!--v-if-->
  <!--v-if-->
  <div data-v-a8515013="" class="v-row my-2">
    <div data-v-a8515013="" class="v-col v-col-5 text-truncate">
      <div data-v-a8515013="" class="text-overline">From</div>
      <hash-link-stub data-v-a8515013="" type="address" hash="0xc056255e6b1e6001852f9f20587a964cb89418e7" fullhash="true"></hash-link-stub>
    </div>
    <div data-v-a8515013="" class="v-col v-col-5 text-truncate">
      <div data-v-a8515013="" class="text-overline">To</div>
      <hash-link-stub data-v-a8515013="" type="address" hash="0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48" fullhash="true" withname="true"></hash-link-stub>
    </div>
  </div>
  <div data-v-a8515013="" class="v-row mb-4">
    <!--v-if-->
    <!--v-if-->
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Cost</div><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-grey text-white" draggable="false"><!----><span class="v-chip__underlay"></span>
      <!---->
      <!---->
      <div class="v-chip__content" data-no-activator=""> Not Available </div>
      <!---->
      <!----></span>
    </div>
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Value</div> 0 Ether
    </div>
  </div>
  <div data-v-a8515013="" class="v-row mb-4">
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-8 v-col">
      <div data-v-a8515013="" class="v-row">
        <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-3 v-col">
          <div data-v-a8515013="" class="text-overline">Block</div><a data-v-a8515013="" style="text-decoration: none;">13,012,562</a>
        </div>
        <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-3 v-col">
          <div data-v-a8515013="" class="text-overline">Mined At</div> 08/07 2:33:37 PM<br data-v-a8515013=""><small data-v-a8515013="">a few seconds ago</small>
        </div>
        <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-3 v-col">
          <div data-v-a8515013="" class="text-overline">Gas Limit</div> 84,000
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <transaction-data-stub data-v-a8515013="" transaction="[object Object]" withoutstorageheader="true"></transaction-data-stub>
  <!--v-if-->
</div>"
`;

exports[`Transaction.vue > Should display the transaction when the receipt is not synced yet for contract creation 1`] = `
"<div data-v-a8515013="" class="v-container v-container--fluid v-locale--is-ltr">
  <div data-v-a8515013="" class="v-row">
    <div data-v-a8515013="" class="v-col">
      <div data-v-a8515013="" class="v-alert v-theme--light bg-warning v-alert--density-compact v-alert--variant-flat my-2" role="alert">
        <!----><span class="v-alert__underlay"></span>
        <!---->
        <div class="v-alert__prepend"><i class="mdi-alert-circle mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="compact"></i></div>
        <div class="v-alert__content">
          <!----> Transaction has been picked up by the indexer, and is currently still being processed. Once it's finished, additional data will be displayed.
        </div>
        <!---->
        <!---->
      </div>
      <h2 data-v-a8515013="" class="text-truncate mb-2">Tx 0x05d709954d59bfaa43bcf629b0a415d30e56ab1400d96dc7bd0ed1664a702759</h2>
    </div>
    <!--v-if-->
  </div><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-success mr-2" draggable="false" style="display: none;"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-check mdi v-icon notranslate v-theme--light v-icon--size-small text-white mr-1" aria-hidden="true"></i>Transaction Succeeded </div>
  <!---->
  <!----></span><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-error mr-2" draggable="false" style="display: none;"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-alert-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-white mr-1" aria-hidden="true"></i> Transaction Failed </div>
  <!---->
  <!----></span><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-grey mr-2" draggable="false"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-help-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-white mr-1" aria-hidden="true"></i> Unknown Transaction Status </div>
  <!---->
  <!----></span><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal" draggable="false"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-file mdi v-icon notranslate v-theme--light v-icon--size-small mr-1" aria-hidden="true"></i> Contract Creation </div>
  <!---->
  <!----></span>
  <!--v-if-->
  <div data-v-a8515013="" class="v-row my-2">
    <div data-v-a8515013="" class="v-col v-col-5 text-truncate">
      <div data-v-a8515013="" class="text-overline">From</div>
      <hash-link-stub data-v-a8515013="" type="address" hash="0xc056255e6b1e6001852f9f20587a964cb89418e7" fullhash="true"></hash-link-stub>
    </div>
    <div data-v-a8515013="" class="v-col v-col-5 text-truncate">
      <div data-v-a8515013="" class="text-overline">Contract Created</div><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-grey text-white" draggable="false"><!----><span class="v-chip__underlay"></span>
      <!---->
      <!---->
      <div class="v-chip__content" data-no-activator=""> Address Not Available </div>
      <!---->
      <!----></span>
    </div>
  </div>
  <div data-v-a8515013="" class="v-row mb-4">
    <!--v-if-->
    <!--v-if-->
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Cost</div><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-grey text-white" draggable="false"><!----><span class="v-chip__underlay"></span>
      <!---->
      <!---->
      <div class="v-chip__content" data-no-activator=""> Not Available </div>
      <!---->
      <!----></span>
    </div>
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Value</div> 0 Ether
    </div>
  </div>
  <div data-v-a8515013="" class="v-row mb-4">
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-8 v-col">
      <div data-v-a8515013="" class="v-row">
        <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-3 v-col">
          <div data-v-a8515013="" class="text-overline">Block</div><a data-v-a8515013="" style="text-decoration: none;">13,012,562</a>
        </div>
        <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-3 v-col">
          <div data-v-a8515013="" class="text-overline">Mined At</div> 08/07 2:33:37 PM<br data-v-a8515013=""><small data-v-a8515013="">a few seconds ago</small>
        </div>
        <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-3 v-col">
          <div data-v-a8515013="" class="text-overline">Gas Limit</div> 84,000
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <!--v-if-->
  <!--v-if-->
  <transaction-data-stub data-v-a8515013="" transaction="[object Object]" withoutstorageheader="true"></transaction-data-stub>
  <!--v-if-->
</div>"
`;

exports[`Transaction.vue > Should display waiting message 1`] = `
"<div data-v-a8515013="" class="v-container v-container--fluid v-locale--is-ltr">
  <h2 data-v-a8515013="" class="text-truncate mb-2">Tx 0x05d709954d59bfaa43bcf629b0a415d30e56ab1400d96dc7bd0ed1664a702759</h2>
  <div data-v-a8515013="" class="v-row">
    <div data-v-a8515013="" class="v-col"> Cannot find transaction. If you just sent it, it might not have been picked up yet by our indexer. This page will refresh automatically as soon as we find it. </div>
  </div>
</div>"
`;

exports[`Transaction.vue > Should not display the menu if public explorer 1`] = `
"<div data-v-a8515013="" class="v-container v-container--fluid v-locale--is-ltr">
  <div data-v-a8515013="" class="v-row">
    <div data-v-a8515013="" class="v-col">
      <!--v-if-->
      <h2 data-v-a8515013="" class="text-truncate mb-2">Tx 0x05d709954d59bfaa43bcf629b0a415d30e56ab1400d96dc7bd0ed1664a702759</h2>
    </div>
    <!--v-if-->
  </div><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-success mr-2" draggable="false"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-check mdi v-icon notranslate v-theme--light v-icon--size-small text-white mr-1" aria-hidden="true"></i>Transaction Succeeded </div>
  <!---->
  <!----></span><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-error mr-2" draggable="false" style="display: none;"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-alert-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-white mr-1" aria-hidden="true"></i> Transaction Failed </div>
  <!---->
  <!----></span><span data-v-a8515013="" class="v-chip v-theme--light v-chip--density-default v-chip--size-small v-chip--variant-tonal bg-grey mr-2" draggable="false" style="display: none;"><!----><span class="v-chip__underlay"></span>
  <!---->
  <!---->
  <div class="v-chip__content" data-no-activator=""><i data-v-a8515013="" class="mdi-help-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-white mr-1" aria-hidden="true"></i> Unknown Transaction Status </div>
  <!---->
  <!----></span>
  <!--v-if-->
  <!--v-if-->
  <div data-v-a8515013="" class="v-row my-2">
    <div data-v-a8515013="" class="v-col v-col-5 text-truncate">
      <div data-v-a8515013="" class="text-overline">From</div>
      <hash-link-stub data-v-a8515013="" type="address" hash="0xc056255e6b1e6001852f9f20587a964cb89418e7" fullhash="true"></hash-link-stub>
    </div>
    <div data-v-a8515013="" class="v-col v-col-5 text-truncate">
      <div data-v-a8515013="" class="text-overline">To</div>
      <hash-link-stub data-v-a8515013="" type="address" hash="0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48" fullhash="true" withname="true"></hash-link-stub>
    </div>
  </div>
  <div data-v-a8515013="" class="v-row mb-4">
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Gas Used</div><span data-v-a8515013="">43,713</span>
    </div>
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Gas Price</div> 59 gwei
    </div>
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Cost</div><span data-v-a8515013="">0.002579067 Ether</span>
    </div>
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-2 v-col">
      <div data-v-a8515013="" class="text-overline">Value</div> 0 Ether
    </div>
  </div>
  <div data-v-a8515013="" class="v-row mb-4">
    <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-8 v-col">
      <div data-v-a8515013="" class="v-row">
        <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-3 v-col">
          <div data-v-a8515013="" class="text-overline">Block</div><a data-v-a8515013="" style="text-decoration: none;">13,012,562</a>
        </div>
        <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-3 v-col">
          <div data-v-a8515013="" class="text-overline">Mined At</div> 08/07 2:33:37 PM<br data-v-a8515013=""><small data-v-a8515013="">a few seconds ago</small>
        </div>
        <div data-v-a8515013="" class="v-col-sm-12 v-col-md-6 v-col-lg-3 v-col">
          <div data-v-a8515013="" class="text-overline">Gas Limit</div> 84,000
        </div>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div data-v-a8515013="" class="v-row my-2">
    <div data-v-a8515013="" class="v-col">
      <h3 data-v-a8515013="" class="mb-2">Token Transfers</h3>
      <div data-v-a8515013="" class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
        <!---->
        <div class="v-card__loader">
          <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
            <!---->
            <div class="v-progress-linear__background"></div>
            <div class="v-progress-linear__buffer" style="width: 0%;"></div>
            <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
              <div class="v-progress-linear__indeterminate">
                <div class="v-progress-linear__indeterminate long"></div>
                <div class="v-progress-linear__indeterminate short"></div>
              </div>
            </transition-stub>
            <!---->
          </div>
        </div>
        <!---->
        <!---->
        <div data-v-a8515013="" class="v-card-text">
          <transaction-token-transfers-stub data-v-a8515013="" hash="0x05d709954d59bfaa43bcf629b0a415d30e56ab1400d96dc7bd0ed1664a702759" withtokendata="true"></transaction-token-transfers-stub>
        </div>
        <!---->
        <!----><span class="v-card__underlay"></span>
      </div>
    </div>
  </div>
  <!--v-if-->
  <transaction-data-stub data-v-a8515013="" transaction="[object Object]" withoutstorageheader="true"></transaction-data-stub>
  <!--v-if-->
</div>"
`;
